Update Advantage Solutions job info

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,10 +35,10 @@ const projects = await getPinnedRepositories();
 			<List>
 				<ListItem
 					title="Started a new job at Advantage Solutions"
-					subtitle="Software Engineer III doing fullstack development"
-					date="Aug 2022"
+					subtitle="Senior Software Engineer doing backend development"
+					date="Feb 2024"
 					src="/images/logos/advantage-solutions.svg"
-					alt="Amazon Web Services"
+					alt="Advantage Solutions"
 				/>
 				<ListItem
 					title="Started a new job at Amazon Web Services"
